<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Text Torch</string>

    <!-- Intro -->
    <string name="next_page">Next page</string>

    <string name="welcome_to_text_torch">Welcome to Text Torch!</string>
    <string name="a_world_of_texting_insight_awaits">A world of texting insight awaits.</string>

    <string name="before_we_can_get_started">Before we can get started, Text Torch will need access to your text messages and contacts.</string>
    <string name="dont_worry">Don\'t worry - none of this information will ever leave your device.</string>
    <string name="intro_you_can_see_the_code">Text Torch is open-source, so you can &lt;a href=\"%1$s\"&gt;view the code&lt;/a&gt; and verify this for yourself if you like.</string>
    <string name="grant_needed_permissions">Grant needed permissions</string>
    <string name="permissions_granted">Permissions granted!</string>

    <string name="would_you">One last thing…would you be willing to enable analytics?</string>
    <string name="would_you_pre_marshmallow">Quick question…would you be willing to enable analytics?</string>
    <string name="why_enable">This lets me know what features people are using, what devices they\'re running the app on, and if anything stops working.</string>
    <string name="analytics_reassurance">Remember: whether or not you turn on analytics, none of your texts or contacts will be sent anywhere.</string>
    <string name="enable_analytics">Enable analytics</string>
    <string name="disable_analytics">Disable analytics</string>

    <string name="all_set">You\'re all set!</string>
    <string name="take_a_look">Take a look</string>

    <!-- Permission-related strings used in multiple places -->
    <string name="app_settings_explanation">Because you\'ve denied multiple permission requests, your phone won\'t let Text Torch request these permissions again. If you want to use Text Torch, you\'ll have to manually grant these permissions from the app\'s settings page.</string>
    <string name="open_app_settings">Open app settings</string>

    <!-- Regain permissions fragment -->
    <string name="regrant_explanation">Text Torch needs access to your texts and contacts to work, but it looks like one or both of those permissions was revoked at some point. To continue, you\'ll have to grant those permissions again.&lt;br&gt;&lt;br&gt;Remember, Text Torch will never send any of your texts or contacts anywhere. You can always &lt;a href=\"%1$s\"&gt;view the code&lt;/a&gt; if you want to verify that.</string>
    <string name="regrant_needed_permissions">Regrant needed permissions</string>

    <!-- Analyze fragment -->
    <string name="analyze_my_texts">Analyze my texts!</string>
    <string name="analyzing">Analyzing…</string>
    <string name="x_percent">%d%%</string>
    <string name="x_out_of_y_message_threads">%1$d/%2$s message threads</string>
    <string name="show_details">Show details</string>
    <string name="x_out_of_y_messages">%1$d/%2$s messages</string>
    <string name="for_current_message_thread">For current message thread:</string>

    <string name="who_texts_first">Who texts first\?</string>
    <string name="average_length">Average text length</string>
    <string name="total_texts">Total texts</string>

    <!-- Menu items -->
    <string name="period">Period</string>
    <string name="six_hours">6 hours</string>
    <string name="twelve_hours">12 hours</string>
    <string name="one_day">1 day</string>
    <string name="two_days">2 days</string>
    <string name="sort_order">Sort order</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- Stats fragment -->
    <string name="no_texts_found">No texts were found.\n\nCome back to Text Torch once you\'ve texted some people!</string>

    <!--Period dialog fragment-->
    <string name="whats_this">What\'s this\?</string>
    <string name="time_explanation">
        Whenever this much time passes with no texts sent, whoever breaks the silence
        will be considered to have started the next conversation.
    </string>
    <string name="close">Close</string>

    <!--Sort type dialog fragment-->
    <string name="order_by">Order by…</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>

    <string name="most_recent">Most recent</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="number_of_conversations">Number of conversations</string>
    <string name="number_of_total_texts">Number of total texts</string>
    <string name="percentage_of_the_time_youve_texted_first">Percentage of the time you\'ve texted first</string>
    <string name="percentage_of_the_texts_youve_sent">Percentage of the texts you\'ve sent</string>
    <string name="percentage_of_total_characters_youve_sent">Percentage of total characters you\'ve sent</string>
    <string name="reversed">Reversed</string>

    <!--Social record view holder-->
    <plurals name="based_on_x_conversations">
        <item quantity="one">Based on %d conversation</item>
        <item quantity="other">Based on %d conversations</item>
    </plurals>
    <plurals name="based_on_x_texts">
        <item quantity="one">Based on %d text</item>
        <item quantity="other">Based on %d texts</item>
    </plurals>
    <string name="you">You</string>
    <string name="texted_first_x_percent_of_the_time">texted first\n%1$d%% of the time</string>
    <string name="sent_x_percent_of_texts">sent %1$d%%\nof texts</string>
    <string name="x_characters_on_average">%1$d characters\non average</string>

    <!--Settings fragment-->
    <string name="show_non_contacts_title">Also list non-contacts</string>
    <string name="show_non_contacts_summary">You probably won\'t be interested in this data</string>
    <string name="enable_analytics_title">Analytics/crash reporting</string>
    <string name="enable_analytics_summary">This lets me know what features people are using and if anything doesn\'t work!</string>

    <!--About fragment-->
    <string name="text_torch_app_icon">Text Torch app icon</string>
    <string name="version_x">Version %1$s</string>
    <string name="about_description">An open source project by Miles Krell</string>

    <string name="view_code_or_report_issue">View the code or report an issue</string>
    <string name="github_url" translatable="false">https://github.com/mileskrell/text-torch</string>

    <string name="view_open_source_licenses">View open source licenses</string>

    <string name="donate">Send me a buck if you\'re feeling generous ❤</string>
    <string name="donate_url" translatable="false">https://paypal.me/mileskrell</string>

    <!-- Licenses fragment -->
    <string name="licenses">Licenses</string>

    <!-- Keys -->
    <string name="key_has_seen_tutorial" translatable="false">has_seen_tutorial</string>
    <string name="key_show_non_contacts" translatable="false">show_non_contacts</string>
    <string name="key_enable_analytics" translatable="false">analytics_enabled</string>
</resources>
