<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".intro.pages.IntroPageAnalytics">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/intro_page_3_text_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="32dp"
            android:breakStrategy="balanced"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/would_you"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintBottom_toTopOf="@id/intro_page_3_text_view_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/intro_page_3_text_view_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:breakStrategy="balanced"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/why_enable"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintBottom_toTopOf="@id/intro_page_3_text_view_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_page_3_text_view_1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/intro_page_3_text_view_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:breakStrategy="balanced"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/analytics_reassurance"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintBottom_toTopOf="@id/intro_analytics_radio_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_page_3_text_view_2" />

        <RadioGroup
            android:id="@+id/intro_analytics_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="86dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_page_3_text_view_3">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/intro_radio_button_enable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_analytics"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/intro_radio_button_disable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disable_analytics"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
