<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".intro.pages.IntroPagePermissions">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/intro_page_2_text_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="32dp"
            android:breakStrategy="balanced"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/before_we_can_get_started"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@id/intro_page_2_text_view_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/intro_page_2_text_view_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:breakStrategy="balanced"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/dont_worry"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@id/intro_page_2_text_view_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_page_2_text_view_1" />

        <TextView
            android:id="@+id/intro_page_2_text_view_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:breakStrategy="balanced"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@id/intro_permissions_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_page_2_text_view_2"
            tools:text="Text Torch is open-source…and URL" />

        <Button
            android:id="@+id/intro_permissions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="86dp"
            android:breakStrategy="balanced"
            android:text="@string/grant_needed_permissions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_page_2_text_view_3" />

        <TextView
            android:id="@+id/intro_text_view_permissions_granted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permissions_granted"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/intro_permissions_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/intro_permissions_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
